# cubby.no

./: .env.example  .gitignore  Cargo.toml  Containerfile  README.md
.github/workflows/: deploy.yml  push-container.yml
src/: data.rs  main.rs  manifest.rs  utils.rs
static/: style.css  syntax-hightlight.js
static/fonts/: fonts.css
templates/: directory.html.hbs  file.html.hbs  index.html.hbs  list.html.hbs  manifest.html.hbs  tags.html.hbs
